fix(ui): limit max-width of RequestLogs filter dropdowns to prevent layout stretching

--- a/src/pages/MonitorPage.module.scss
+++ b/src/pages/MonitorPage.module.scss
@@ -580,6 +580,7 @@
   // 隐藏滚动条但保持可滚动
   scrollbar-width: none;
   -ms-overflow-style: none;
+
   &::-webkit-scrollbar {
     display: none;
   }
@@ -602,66 +603,79 @@
   td:nth-child(1) {
     width: 100px;
   }
+
   // API
   th:nth-child(2),
   td:nth-child(2) {
     width: 110px;
   }
+
   // 请求类型
   th:nth-child(3),
   td:nth-child(3) {
     width: 65px;
   }
+
   // 模型
   th:nth-child(4),
   td:nth-child(4) {
     width: 160px;
   }
+
   // 请求渠道
   th:nth-child(5),
   td:nth-child(5) {
     width: 140px;
   }
+
   // 状态
   th:nth-child(6),
   td:nth-child(6) {
     width: 60px;
   }
+
   // 最近请求状态
   th:nth-child(7),
   td:nth-child(7) {
     width: 100px;
   }
+
   // 成功率
   th:nth-child(8),
   td:nth-child(8) {
     width: 70px;
   }
+
   // 请求数
   th:nth-child(9),
   td:nth-child(9) {
     width: 70px;
   }
+
   // 输入
   th:nth-child(10),
   td:nth-child(10) {
     width: 60px;
   }
+
   // 输出
   th:nth-child(11),
   td:nth-child(11) {
     width: 60px;
   }
+
   // 总 Token
   th:nth-child(12),
   td:nth-child(12) {
     width: 70px;
   }
+
   // 时间
   th:nth-child(13),
   td:nth-child(13) {
     width: 150px;
   }
+
   // 操作
   th:nth-child(14),
   td:nth-child(14) {
@@ -719,6 +733,7 @@
 
   // 移动端固定首列
   @include mobile {
+
     th:first-child,
     td:first-child {
       position: sticky;
@@ -877,6 +892,10 @@
   color: var(--text-primary);
   font-size: 12px;
   min-width: 120px;
+  max-width: 180px;
+  text-overflow: ellipsis;
+  white-space: nowrap;
+  overflow: hidden;
   cursor: pointer;
 
   @include mobile {
